Added query package + separation from reading and writing